--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,7 +12,7 @@
       Username: <input type="text" name="username"><br>
       Password: <input type="password" name="password"><br>
 
-      <input type="submit" value="Submit">
+      <input type="submit">
     </form>
   </body>
 </html>
